--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="header">
       <div class="logo">
-        <img src="./logo/logo.png" alt="Logo" />
+        <a href="index.html"><img src="./logo/logo.png" alt="Logo" /> </a>
       </div>
       <h1>DHIRAJ MALI</h1>
       <div class="intros">
@@ -20,7 +20,7 @@
         <a href="#">GUITARIST</a>
       </div>
     </div>
-    <img  class="image" src="./design/design.png" alt="">
+    <img class="image" src="./design/design.png" alt="" />
 
     <div class="body">
       <div class="boxes">
@@ -43,16 +43,16 @@
 
       <div class="projects">
         <div class="box11">
-          <img src="./bulb/bulb1.png" alt="" />
-          <h3>Modelling of Hybrid Electric Vehicle using MATLAB</h3>
+          <img class="bulb-1" src="./bulb/bulb1.png" alt="" />
+          <a href="#"><h3>Modelling of Hybrid Electric Vehicle using MATLAB</h3></a>
         </div>
         <div class="box22">
-          <img src="./bulb/bulb2.png" alt="" />
-          <h3>Production of Free Energy</h3>
+          <img class="bulb-2" src="./bulb/bulb2.png" alt="" />
+          <a href="#"><h3>Production of Free Energy</h3></a>
         </div>
         <div class="box33">
-          <img src="./bulb/bulb3.png" alt="" />
-          <h3>Bidirectional Eharger for Electric Vehicles</h3>
+          <img class="bulb-3" src="./bulb/bulb3.png" alt="" />
+          <a href="#"><h3>Bidirectional Eharger for Electric Vehicles</h3></a>
         </div>
       </div>
 
@@ -97,13 +97,13 @@
       </div>
 
       <div class="goa">
-        <img class="image1" src="./design/design1.png" alt="">
-        <img src="goa.png" alt="">
+        <img class="image1" src="./design/design1.png" alt="" />
+        <img src="goa.png" alt="" />
       </div>
     </div>
 
     <footer class="footer">
-      <div>&copy; 2023 April | Made with &#10084 by Kulkarni Atharwa</div>
+      <div>&copy; 2023 April | Made with &#10084; by Kulkarni Atharwa</div>
     </footer>
   </body>
 </html>
